samples/_failures_safe/1761191229_3c14de_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b090cee3.c: In function ‘main’:
./samples/SAFE/__tmp_b090cee3.c:140:5: error: expected expression at end of input
  140 |     if (mat2.data == NULL)
      |     ^~
./samples/SAFE/__tmp_b090cee3.c:140:5: error: expected declaration or statement at end of input
